syntax = "proto3";

option csharp_namespace = "Nt.Pos.Server";

package Greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayBye (ByeRequest) returns (ByeResponse);
}

// The request message containing the user's name.
message ByeRequest {
  string name = 1;
}

// The response message containing the greetings.
message ByeResponse {
  string message = 1;
}
